# cpp-beginner-projects

./: .gitignore  README.md
contact-manager/: CMakeLists.txt
contact-manager/include/: contact.h  contact_manager.h
contact-manager/src/: contact.cpp  contact_manager.cpp  main.cpp
todo-list/: CMakeLists.txt
todo-list/include/: date.h  task.h  todo_list.h
todo-list/src/: date.cpp  main.cpp  task.cpp  todo_list.cpp
